; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Array.c_Array_Iter_Prev.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Array.c_Array_Iter_Prev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Array = type { i32 }

@Terminal = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64)* @Array_Iter_Prev to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @Array_Iter_Prev(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.Array*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  %7 = load i64, i64* %4, align 8
  %8 = inttoptr i64 %7 to %struct.Array*
  store %struct.Array* %8, %struct.Array** %6, align 8
  %9 = load i64, i64* %5, align 8
  %10 = load %struct.Array*, %struct.Array** %6, align 8
  %11 = call i64 @Array_Item(%struct.Array* %10, i32 0)
  %12 = icmp slt i64 %9, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i64, i64* @Terminal, align 8
  store i64 %14, i64* %3, align 8
  br label %24

15:                                               ; preds = %2
  %16 = load i64, i64* %5, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = load %struct.Array*, %struct.Array** %6, align 8
  %19 = call i32 @Array_Step(%struct.Array* %18)
  %20 = sext i32 %19 to i64
  %21 = sub i64 0, %20
  %22 = getelementptr inbounds i8, i8* %17, i64 %21
  %23 = ptrtoint i8* %22 to i64
  store i64 %23, i64* %3, align 8
  br label %24

24:                                               ; preds = %15, %13
  %25 = load i64, i64* %3, align 8
  ret i64 %25
}

declare dso_local i64 @Array_Item(%struct.Array*, i32) #1

declare dso_local i32 @Array_Step(%struct.Array*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
